# catan

./: .gitignore  CMakeLists.txt  README.md  todo.txt
images/: catan.xcf  numbers.xcf
include/: action.hpp  actual_ui.hpp  constants.hpp  data_structures.hpp  game.hpp  game_board.hpp  player.hpp  player_resources.hpp  randomAI.hpp  terminal_ui.hpp
src/: actual_ui.cpp  data_structures.cpp  game.cpp  game_board.cpp  player_resources.cpp  randomAI.cpp  terminal_ui.cpp  test.cpp  texture.cpp
